--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,18 @@
     <%= stylesheet_link_tag 'application', media: 'all' %>
 
   </head>
+  <% if @current_user == nil %>
+  
+  <a href= "/user_sign_in">Sign in</a>
+  |
+  <a href= "/user_sign_up">Sign up</a>
+  <% else %>
+  <a href= "/">Your todo list</a>
+  |
+  <a href= "/edit_user_profile">Edit Profile</a>
+  |
+  <a href= "/user_sign_out">Sign out</a>
+  <% end %>
 
   <body>
     <%= yield %>
