--- a/app/views/deliveries/index.html.erb
+++ b/app/views/deliveries/index.html.erb
@@ -1,8 +1,11 @@
 <div>
   <div>
     <h1>
-      List of all deliveries
+      Delivery Tracker
     </h1>
+
+    <p>Know if something gets lost in the mail.</p>
+
   </div>
 </div>
 
@@ -11,17 +14,10 @@
 <div>
   <div>
     <h2>
-      Add a new delivery
+      Expecting a package?
     </h2>
 
     <form action="/insert_delivery" method="post">
-      <div>
-        <label for="user_id_box">
-          User
-        </label>
-
-        <input type="text" id="user_id_box" name="query_user_id">
-      </div>
 
       <div>
         <label for="description_box">
@@ -32,119 +28,85 @@
       </div>
 
       <div>
+        <label for="arriving_box">
+          Supposed to arrive on
+        </label>
+
+        <input type="date" id="arriving_box" name="query_arriving">
+      </div>
+
+      <div>
         <label for="details_box">
           Details
         </label>
 
-        <input type="text" id="details_box" name="query_details">
+        <textarea type="text" id="details_box" name="query_details"></textarea>
       </div>
 
       <div>
-        <label for="status_box">
-          Status
-        </label>
-
-        <input type="text" id="status_box" name="query_status">
-      </div>
-
-      <div>
-        <label for="arriving_box">
-          Arriving
-        </label>
-
-        <input type="text" id="arriving_box" name="query_arriving">
+        <input type="hidden" value="waiting_on" name="query_status">
       </div>
 
       <button>
-        Create delivery
+        Log delivery
       </button>
     </form>
   </div>
 </div>
 
 <hr>
-<div>
-  <div>
-    <table border="1">
-      <tr>
-        <th>
-          ID
-        </th>
 
-        <th>
-          User
-        </th>
+<div class="waiting_on">
+  <h2>Waiting on</h2>
 
-        <th>
-          Description
-        </th>
+  <ul>
 
-        <th>
-          Details
-        </th>
+    <% @list_of_deliveries.where(:status => "waiting_on").each do |a_delivery| %>
+      <li>
+        <div><%= a_delivery.description %></div>
 
-        <th>
-          Status
-        </th>
+        <div style="">
+          Supposed to arrive on
+          figure this out
+        </div>
 
-        <th>
-          Arriving
-        </th>
-
-        <th>
-          Created at
-        </th>
-
-        <th>
-          Updated at
-        </th>
-
-        <th>
-        </th>
-      </tr>
-
-      <% @list_of_deliveries.each do |a_delivery| %>
-      <tr>
-        <td>
-          <%= a_delivery.id %>
-        </td>
-
-        <td>
-          <%= a_delivery.user_id %>
-        </td>
-
-        <td>
-          <%= a_delivery.description %>
-        </td>
-
-        <td>
+        <div>
           <%= a_delivery.details %>
-        </td>
+        </div>
 
-        <td>
-          <%= a_delivery.status %>
-        </td>
+        <div>
+          <form action="/modify_delivery/<%= a_delivery.id %>" method="post">
+            <input type="hidden" name="query_status" value="received">
 
-        <td>
-          <%= a_delivery.arriving %>
-        </td>
-
-        <td>
-          <%= time_ago_in_words(a_delivery.created_at) %> ago
-        </td>
-        <td>
-          <%= time_ago_in_words(a_delivery.updated_at) %> ago
-        </td>
-
-        <td>
-          <a href="/deliveries/<%= a_delivery.id %>">
-            Show details
-          </a>
-        </td>
-      </tr>
+            <button>Mark as received</button>
+          </form>
+        </div>
+        
+        <br>
+      </li>
       <% end %>
-    </table>
-  </div>
+  </ul>
 </div>
 
 <hr>
+
+<div class="received">
+  <h2>Received</h2>
+
+  <ul>
+
+    <% @list_of_deliveries.where(:status => "received").each do |a_delivery| %>
+      <li>
+        <div><%= a_delivery.description %></div>
+        
+        <small>
+         Updated <%= time_ago_in_words(a_delivery.updated_at)%> ago
+
+          <a href="/delete_delivery/<%= a_delivery.id %>">Delete</a>
+        </small>
+        
+        <br>
+      </li>
+      <% end %>
+  </ul>
+</div>
