Arriving and Notice Done(100% for Finale)

--- a/app/views/deliveries/index.html.erb
+++ b/app/views/deliveries/index.html.erb
@@ -67,7 +67,7 @@
 
         <div style="">
           Supposed to arrive on
-          figure this out
+          <%= a_delivery.arriving %>
         </div>
 
         <div>
